scss/components/_burger-menu.scss
@use "../abstracts/mixins" as m;
@use "../abstracts/variables" as v;
@use "sass:map";
@use "sass:color";
@use "sass:list";

.header {
    &__burger-menu {
        background-color: v.$bg-secondary;
        @include m.flex($justify: flex-start, $align: center, $gap: 1.862rem);
        margin-left: 1.6rem;
        cursor: pointer;

        @media (min-width: 1440px) {
            .burger-menu {
                display: none;
            }

            .logo-icon {
                width: 16rem;
                height: 2.2rem;
                z-index: 0;
                display: block;
            }
        }
    }

    &__right-panel {
        @include m.flex($align: center, $gap: 1.2rem);
        margin-right: 2rem;
        cursor: pointer;

        @media (min-width: 991px) {
            gap: 4rem;
        }
    }

    &__right-wrapper {
        @include m.flex($align: center, $gap: 1.387rem);

        @media (min-width: 991px) {
            img:nth-child(1) {
                width: 2.213rem;
                height: 2.025rem;
                transition: opacity 0.3s ease;
                &:hover {
                    transform: scale(1.1);
                    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
                }
            }

            .logo-icon {
                width: 2.25rem;
                height: 2.25rem;
                transition: opacity 0.3s ease;
                &:hover {
                    transform: scale(1.1);
                    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
                }
            }
        }
    }
}

.logo-icon {
    cursor: pointer;
    transition: 0.3s ease-in-out;

    &:hover {
        transform: scale(1.05);
        box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.1);
    }
}

.nav-toggle {
    display: none;
}

.nav {
    position: fixed;
    top: 0;
    left: -100%;
    width: 100%;
    height: 100vh;
    background-color: v.$bg-secondary;
    z-index: 999999;
    transition: left 0.4s ease-in-out;
    padding: 8rem 2rem 4rem 2.5rem;
    @include m.flex($direction: column);

    overflow-y: auto;
}
.burger-menu {
    cursor: pointer;
}

#nav-toggle:checked ~ .nav {
    left: 0;
}

#nav-toggle:checked ~ .header__burger-menu .nav-burger .close-icon {
    opacity: 1;
    visibility: visible;
    pointer-events: auto;
    position: fixed;
    top: 2.2rem;
    left: 2.2rem;
    z-index: 1000000;
    width: 2.2rem;
}

#nav-toggle:checked ~ .signup-btn {
    display: block;
    z-index: 99;
}

#nav-toggle:checked ~ .header .nav-burger .burger-menu {
    visibility: hidden;
}

.nav__burger-menu li {
    margin-bottom: 3rem;
}

.nav-link,
.details summary {
    font-size: 1.6rem;
    font-weight: 500;
    color: v.$burger-menu;
    @include m.flex($gap: 2rem, $align: center);
    cursor: pointer;
    transition: 0.2s ease-in;

    &:hover {
        color: color.adjust(v.$burger-menu, $lightness: -20%);
        padding-left: 0.5rem;
    }

    &:active {
        color: color.adjust(v.$burger-menu, $lightness: 10%);
    }

    &:focus {
        outline: none;
        color: color.adjust(v.$burger-menu, $lightness: -20%);
    }
}

.dropdown-menu {
    padding-left: 2rem;
    margin-top: 1.5rem;

    li a {
        color: rgba(0, 0, 0, 0.5);
        font-size: 1.6rem;
        text-decoration: none;
        font-weight: 500;
        transition: opacity 0.2s ease;

        &:hover {
            color: #000000;
            padding-left: 0.5rem;
        }

        &:active {
            color: rgba(0, 0, 0, 0.8);
            transform: scale(0.98);
        }
    }
}

.arrow {
    width: 1.4rem;
    transition: 0.3s;
}

.details[open] .arrow {
    transform: rotate(180deg);
}

.signup-btn {
    display: block;
    width: 16.5rem;
    height: 5.2rem;
    background-color: v.$bg-primary;
    color: v.$text-primary;
    border: none;
    padding: 1.6rem;
    border-radius: 1rem;
    font-size: 1.6rem;
    font-weight: 500;
    text-align: center;
    cursor: pointer;
    margin-top: 4rem;
    transition: background-color 0.3s ease;

    &:hover {
        background-color: v.$bg-secondary;
        color: v.$text-secondary;
    }
}

.close-icon {
    cursor: pointer;
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
    transition: opacity 0.2s ease;
}

